# d_projects

./: README.html  README.md  diff.py  polska_zapis.py  pyproject.toml  test_func.py  test_zadacha.py
Alogorithms/: ch4.py
Flask_lessons/: Makefile  pyproject.toml  user.json
Flask_lessons/flask_lessons/less2_flask/: example.py
Flask_lessons/flask_lessons/less2_flask/templates/users/: index.html  new.html  user.html
OOP/: Задача booking_registr.py  Задача объекты сущности.py  Паттерн декоратор.py  Паттерн стратегия.py  изменяемая конфигурация классов задача.py  конфигурация классов задача.py  объектная композиция.py  паттерн адаптер.py
Trees/: 4)Простой алгоритм агрегации.py  7)Подсчёт пусных директорий в дереве.py  tests_tree_metods.py  tets_tree.py
functions_for_tree/: 1)методы обработки деревьев.py  2)Изменение меты в ФС.py  2)рекурсивный поиск внутри дерева.py  3)рекурсивное изменение меты внутри дерева.py  5)Подсчёт директорий первого уровня в деревьях.py  6)Подсчёт размеров файлов для директорий первого уровня.py  7)Подсчёт пусных директорий в дереве.py  8)Подсчёт пустых папок с использвание аккумулятора.py  9)Поиск файлов с частью строки в дереве.py
newFlask/: example.py  pyvenv.cfg  server.py
src/: capitalize.py
Динамическая диспечеризация/: динамическая диспечеризация.py
Задачи/: 1.py  TicTacToe.py  polska_zapis.py  triangle_pascal(рекурсия).py  Задача боронирование дат.py  Класс обраьотки словарей.py  Парсинг URL.py  диспечеризация по параметру.py  диспечеризация_файлов.py  класс обрезающий строки.py  парсинг ссылок из списка словарей.py  (+1 more)
(+31 files in other folders)
